--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2527,7 +2527,7 @@
     margin-left: 14vh;
   }
 }
-@media all and (min-device-width: 388px) and (max-device-width: 411px) and (max-device-height: 825px) {
+@media only screen and (min-device-width: 388px) and (max-device-width: 411px) and (max-device-height: 825px) {
   .contain {
     position: absolute;
     width: 68vh;
@@ -2653,7 +2653,7 @@
     font-weight: bolder;
   }
   .skills {
-    margin-top: -55vh;
+    margin-top: -50vh;
     margin-bottom: 60vh;
   }
   .footer .footerRight {
@@ -2670,7 +2670,7 @@
     width: 93px;
     height: 33px;
     padding: 2px 10px 0px 6px;
-    margin-left: 50vh;
+    margin-left: 65vh;
     margin-top: -15px;
     background-color: rgb(36, 122, 89);
     color: white;
@@ -2740,7 +2740,7 @@
     border-radius: 7px;
     font-weight: 600;
     width: 102px;
-    margin-left: -49vh;
+    margin-left: -55.3vh;
     height: 33px;
     padding: 2px 10px 0px 10px;
     margin-top: 15px;
@@ -2752,7 +2752,7 @@
     border-radius: 7px;
     font-weight: 600;
     width: 77px;
-    margin-left: -36.2vh;
+    margin-left: -40.5vh;
     height: 33px;
     padding: 2px 10px 0px 10px;
     margin-top: -33px;
@@ -2764,7 +2764,7 @@
     border-radius: 7px;
     font-weight: 600;
     width: 90px;
-    margin-left: -26.6vh;
+    margin-left: -29vh;
     height: 33px;
     padding: 2px 10px 0px 10px;
     margin-top: -33px;
@@ -2789,7 +2789,7 @@
     font-weight: 600;
     width: 89px;
     height: 33px;
-    margin-left: -49vh;
+    margin-left: -55.3vh;
     padding: 2px 10px 0px 8px;
     margin-top: 5px;
     background-color: rgb(36, 122, 89);
@@ -2802,7 +2802,10 @@
   }
   .chat {
     font-size: 24px;
-    margin-left: 14vh;
+    margin-left: 25vh;
+  }
+  .comp {
+    margin-left: 30vh;
   }
 }
 
@@ -3396,7 +3399,7 @@
   }
 }
 
-@media only screen and (min-device-width: 390px) and (max-device-width: 799px) and (max-device-height: 1200px) {
+@media only screen and (min-device-width: 413px) and (max-device-width: 711px) and (max-device-height: 1200px) {
   .contain {
     position: absolute;
     width: 10vh;
@@ -3552,7 +3555,7 @@
     width: 93px;
     height: 33px;
     padding: 2px 10px 0px 6px;
-    margin-left: 50vh;
+    margin-left: 57vh;
     margin-top: -15px;
     background-color: rgb(36, 122, 89);
     color: white;
@@ -3690,300 +3693,7 @@
   }
 }
 
-@media only screen and (min-device-width: 300px) and (max-device-width: 350px) and (max-device-height: 700px) {
-  .contain {
-    position: absolute;
-    width: 68vh;
-    top: 199%;
-    left: 50%;
-    margin-top: -10vh;
-    margin-left: 7vh;
-    transform: translate(-50%, -50%);
-    padding-left: 30px;
-    padding: 30px;
-  }
-  .tech {
-    font-size: 30px;
-  }
-
-  .card {
-    width: 35vh;
-    margin-bottom: -20vh;
-  }
-  .homeSessionCard {
-    width: 55vh;
-    margin-top: 13vh;
-    margin-left: 9vh;
-    margin-bottom: -20vh;
-  }
-  .mail {
-    margin-left: 12vh;
-  }
-
-  .yourRecipeCard {
-    width: 55vh;
-    margin-top: 13vh;
-    margin-left: 9vh;
-    margin-bottom: 40vh;
-  }
-  .footer {
-    position: absolute;
-    left: 0;
-    right: 0;
-    background: rgb(197, 112, 112);
-    color: black;
-    height: 30vh;
-  }
-  .footer_content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    margin-top: 20px;
-    float: left;
-    margin-left: 40px;
-    margin-bottom: 25px;
-  }
-
-  .footer .footerLeft {
-    flex: 33.3%;
-    margin-left: 20px;
-  }
-
-  .footer .footerRight {
-    flex: 33.3%;
-    margin-top: -60px;
-  }
-
-  .footer .footerMiddle {
-    flex: 33.3%;
-  }
-
-  .name {
-    font-size: 20px;
-    font-weight: bolder;
-  }
-  .name a {
-    text-decoration: none;
-    color: black;
-  }
-  .link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    margin-top: 22px;
-    font-weight: bolder;
-  }
-  .ink {
-    font-weight: bold;
-    font-size: 20px;
-    margin-top: -4px;
-    margin-left: 5vh;
-  }
-  .link a {
-    text-decoration: none;
-    font-weight: bold;
-    color: rgb(12, 12, 12);
-    margin-left: 5vh;
-  }
-  .footer_socials {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    float: right;
-    margin-right: 40px;
-    margin-top: -50px;
-    margin-bottom: 15px;
-  }
-  .footer_socials a {
-    color: black;
-  }
-  .footerRight .intouch {
-    font-weight: bold;
-    margin-top: 15px;
-    font-size: 20px;
-    margin-bottom: 10px;
-    margin-right: -4vh;
-  }
-
-  .des {
-    font-size: 30px;
-    margin-right: -70px;
-  }
-
-  .homeSessionBody1 {
-    font-size: 25px;
-    margin-right: -70px;
-  }
-  .appImage {
-    margin-left: -26px;
-  }
-
-  .homeSessionBody1 {
-    font-size: 30px;
-    margin-right: -100px;
-  }
-  .explain {
-    font-size: 29px;
-    font-weight: bolder;
-  }
-  .skills {
-    margin-top: -55vh;
-    margin-bottom: 60vh;
-    margin-left: 65px;
-  }
-  .footer .footerRight {
-    font-size: 12px;
-    margin-top: 45px;
-    margin-left: -23.5vh;
-    width: 52vh;
-  }
-
-  .java {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 93px;
-    height: 33px;
-    padding: 2px 10px 0px 6px;
-    margin-left: 50vh;
-    margin-top: -15px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .htm {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 65px;
-    height: 33px;
-    margin-left: -0.1vh;
-    margin-top: -15px;
-    padding: 2px 10px 0px 8px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .css {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 50px;
-    margin-left: -0.1vh;
-    height: 33px;
-    padding: 2px 10px 0px 8px;
-    margin-top: -15px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .react {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 61px;
-    height: 33px;
-    margin-left: -0.1vh;
-    padding: 2px 10px 0px 7px;
-    margin-top: -15px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .next {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 73px;
-    height: 33px;
-    margin-left: -0.01vh;
-    padding: 2px 10px 0px 8px;
-    margin-top: -15px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .sql {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 50px;
-    height: 33px;
-    margin-left: -0.01vh;
-    padding: 2px 10px 0px 8px;
-    margin-top: -15px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .post {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 102px;
-    margin-left: -61.3vh;
-    height: 33px;
-    padding: 2px 10px 0px 10px;
-    margin-top: 15px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .nod {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 77px;
-    margin-left: -45.5vh;
-    height: 33px;
-    padding: 2px 10px 0px 10px;
-    margin-top: -33px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .boot {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 90px;
-    margin-left: -33.5vh;
-    height: 33px;
-    padding: 2px 10px 0px 10px;
-    margin-top: -33px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .tab {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 77px;
-    height: 33px;
-    margin-left: -19.5vh;
-    padding: 2px 10px 0px 10px;
-    margin-top: -33px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .lize {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 89px;
-    height: 33px;
-    margin-left: -61.3vh;
-    padding: 2px 10px 0px 8px;
-    margin-top: 5px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-
-  .chat {
-    font-size: 20px;
-    margin-left: 17vh;
-  }
-}
-
-@media all and (min-device-width: 500px) and (max-device-width: 750px) and (max-device-height: 1138px) {
+@media only screen and (min-device-width: 712px) and (max-device-width: 799px) and (max-device-height: 1200px) {
   .contain {
     position: absolute;
     width: 10vh;
@@ -4121,7 +3831,7 @@
     font-weight: bolder;
   }
   .skills {
-    margin-top: -45vh;
+    margin-top: -40vh;
     margin-bottom: 50vh;
     margin-left: 65px;
   }
@@ -4221,7 +3931,7 @@
     border-radius: 7px;
     font-weight: 600;
     width: 77px;
-    margin-left: -26.8vh;
+    margin-left: -25.6vh;
     height: 33px;
     padding: 2px 10px 0px 10px;
     margin-top: -33px;
@@ -4233,7 +3943,7 @@
     border-radius: 7px;
     font-weight: 600;
     width: 90px;
-    margin-left: -19.9vh;
+    margin-left: -18vh;
     height: 33px;
     padding: 2px 10px 0px 10px;
     margin-top: -33px;
@@ -4246,7 +3956,7 @@
     font-weight: 600;
     width: 77px;
     height: 33px;
-    margin-left: -11.9vh;
+    margin-left: -9vh;
     padding: 2px 10px 0px 10px;
     margin-top: -33px;
     background-color: rgb(36, 122, 89);
@@ -4274,5 +3984,302 @@
   }
   .comp {
     margin-left: 25vh;
+  }
+}
+
+@media only screen and (min-device-width: 300px) and (max-device-width: 359px) and (max-device-height: 700px) {
+  .contain {
+    position: absolute;
+    width: 68vh;
+    top: 199%;
+    left: 50%;
+    margin-top: -10vh;
+    margin-left: 7vh;
+    transform: translate(-50%, -50%);
+    padding-left: 30px;
+    padding: 30px;
+  }
+  .tech {
+    font-size: 30px;
+  }
+
+  .card {
+    width: 35vh;
+    margin-bottom: -20vh;
+  }
+  .homeSessionCard {
+    width: 55vh;
+    margin-top: 13vh;
+    margin-left: 9vh;
+    margin-bottom: -20vh;
+  }
+
+  .yourRecipeCard {
+    width: 55vh;
+    margin-top: 13vh;
+    margin-left: 9vh;
+    margin-bottom: 40vh;
+  }
+  .footer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    background: rgb(197, 112, 112);
+    color: black;
+    height: 30vh;
+  }
+  .footer_content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 20px;
+    float: left;
+    margin-left: 40px;
+    margin-bottom: 25px;
+  }
+
+  .footer .footerLeft {
+    flex: 33.3%;
+    margin-left: 20px;
+  }
+
+  .footer .footerRight {
+    flex: 33.3%;
+    margin-top: -60px;
+  }
+
+  .footer .footerMiddle {
+    flex: 33.3%;
+  }
+
+  .name {
+    font-size: 20px;
+    font-weight: bolder;
+  }
+  .name a {
+    text-decoration: none;
+    color: black;
+  }
+  .link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 22px;
+    font-weight: bolder;
+  }
+  .ink {
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: -4px;
+    margin-left: 5vh;
+  }
+  .link a {
+    text-decoration: none;
+    font-weight: bold;
+    color: rgb(12, 12, 12);
+    margin-left: 5vh;
+  }
+  .footer_socials {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    float: right;
+    margin-right: 40px;
+    margin-top: -50px;
+    margin-bottom: 15px;
+  }
+  .footer_socials a {
+    color: black;
+  }
+  .footerRight .intouch {
+    font-weight: bold;
+    margin-top: 15px;
+    font-size: 20px;
+    margin-bottom: 10px;
+    margin-right: -4vh;
+  }
+
+  .des {
+    font-size: 30px;
+    margin-right: -70px;
+  }
+
+  .homeSessionBody1 {
+    font-size: 25px;
+    margin-right: -70px;
+  }
+  .appImage {
+    margin-left: -26px;
+  }
+
+  .homeSessionBody1 {
+    font-size: 30px;
+    margin-right: -100px;
+  }
+  .explain {
+    font-size: 29px;
+    font-weight: bolder;
+  }
+  .skills {
+    margin-top: -55vh;
+    margin-bottom: 60vh;
+    margin-left: 35px;
+  }
+  .abimg {
+    margin-left: 20vh;
+  }
+  .footer .footerRight {
+    font-size: 12px;
+    margin-top: 45px;
+    margin-left: -23.5vh;
+    width: 52vh;
+  }
+
+  .java {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 93px;
+    height: 33px;
+    padding: 2px 10px 0px 6px;
+    margin-left: 75vh;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .htm {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 65px;
+    height: 33px;
+    margin-left: -0.1vh;
+    margin-top: -15px;
+    padding: 2px 10px 0px 8px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .css {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 50px;
+    margin-left: -0.1vh;
+    height: 33px;
+    padding: 2px 10px 0px 8px;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .react {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 61px;
+    height: 33px;
+    margin-left: -0.1vh;
+    padding: 2px 10px 0px 7px;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .next {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 73px;
+    height: 33px;
+    margin-left: -0.01vh;
+    padding: 2px 10px 0px 8px;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .sql {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 50px;
+    height: 33px;
+    margin-left: -0.01vh;
+    padding: 2px 10px 0px 8px;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .post {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 102px;
+    margin-left: -61.3vh;
+    height: 33px;
+    padding: 2px 10px 0px 10px;
+    margin-top: 15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .nod {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 77px;
+    margin-left: -45.5vh;
+    height: 33px;
+    padding: 2px 10px 0px 10px;
+    margin-top: -33px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .boot {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 90px;
+    margin-left: -33.5vh;
+    height: 33px;
+    padding: 2px 10px 0px 10px;
+    margin-top: -33px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .tab {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 77px;
+    height: 33px;
+    margin-left: -19.5vh;
+    padding: 2px 10px 0px 10px;
+    margin-top: -33px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .lize {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 89px;
+    height: 33px;
+    margin-left: -61.3vh;
+    padding: 2px 10px 0px 8px;
+    margin-top: 5px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+
+  .chat {
+    font-size: 21px;
+    margin-left: 22vh;
+  }
+
+  .mail {
+    margin-left: 20vh;
   }
 }
